# mojaloop-cli

./: Cargo.toml  README.md  shell.nix
.github/workflows/: README.md  build.yml  publish-github.yml  version-check.yml
src/: main.rs
