[package]
name = "mojaloop-cli"
version = "0.11.4"
authors = ["msk- <mattkingston@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
# Pinning clap to avoid compile issues with 3.0.0-beta.4.
clap = "=3.0.0-beta.2"
clap_derive = "=3.0.0-beta.2"
cli-table = "0.4"
hyper = "0.14"
http = "0.2.4" # probably needs to be the same as our version of hyper
tokio = { version = "1.6.1", features = ["full"] }
tokio-util = "0.6"
futures = "0.3.15"
futures-util = "0.3.15"
mojaloop-api = { git = "https://github.com/partiallyordered/mojaloop-api", rev = "4978aded22dc9f2ce05093ba28555da67d328199", features = ["hyper", "clients-kube"] }
# mojaloop-api = { path = "/home/msk/projects/github.com/msk-/mojaloop-api/", features = ["hyper", "clients-kube"] }
fspiox-api = { git = "https://github.com/partiallyordered/fspiox-api", rev = "b4a328a89c06a23c39bd96a6f3ccc41bdf4f0d83", features = ["fsp_http", "clients-kube"] }
# fspiox-api = { path = "/home/msk/projects/github.com/msk-/fspiox-api/", features = ["fsp_http", "clients-kube"] }
thiserror = "1.0"
httparse = "1.4"
serde = "1.0"
serde_json = "1.0"
# Note: we can't use rustls because of this issue: https://github.com/clux/kube-rs/issues/153
kube = { git = "https://github.com/partiallyordered/kube-rs", rev = "46a777178779e6b0895f53ca8202eb7325315230", features = ["ws"] }
kube-runtime = { version = "0.60.0" }
k8s-openapi = { version = "0.13.0", default-features = false, features = ["v1_21"] }
openssl = { version = "0.10", features = ["vendored"] }
url = "2"
strum = "0.21"
strum_macros = "0.21"
voodoo-doll = { git = "https://github.com/partiallyordered/voodoo-doll", rev = "v0.11.1" }
# voodoo-doll = { path = "/home/msk/projects/github.com/msk-/voodoo-doll/" }
rust_decimal = "1"
